# src/swagger-output.json
@@ -36,7 +36,7 @@
     "/": {
       "get": {
         "tags": [
-          "Home"
+          "Test"
         ],
         "description": "",
         "parameters": [],
@@ -52,12 +52,13 @@
     },
     "/login-register": {
       "get": {
-        "tags": [
-          "Home"
-        ],
         "description": "",
         "parameters": [],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
       }
     }
   },
